2016-04-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2916: Update CACAO drop to use the latest
	from cacao-staging
	* patches/cacao/pr2032.patch,
	* patches/cacao/pr2035-tempdir.patch,
	* patches/cacao/pr2349.patch,
	* patches/cacao/pr2776-cache_api.patch,
	* patches/cacao/pr2832-refactoring_error.patch,
	* patches/cacao/pr2908-missing_functions.patch,
	* patches/cacao/pr2910-8_support.patch:
	Removed as applied in new snapshot.
	* Makefile.am:
	(CACAO_VERSION): Bump to icedtea-3.0.0 changeset
	in gnu_andrew/cacao-staging repository.
	(CACAO_SHA256SUM): Likewise.
	(ICEDTEA_PATCHES): Remove patches applied upstream.
	(extract-cacao): Adapt to prefix of new snapshot.
	* NEWS: Updated.

2016-04-05  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2910: Add rudimentary support for OpenJDK 8
	class files to CACAO
	* Makefile.am:
	(ICEDTEA_PATCHES): Add new patch.
	* NEWS: Updated.
	* patches/cacao/pr2910-8_support.patch:
	Bump versions in CACAO and allow it to handle
	interface methods and constant pools in OpenJDK 8
	bytecode files.

2016-03-31  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2908: Add missing functions for CACAO
	OpenJDK JVM implementation
	* Makefile.am:
	(ICEDTEA_PATCHES): Add new patch.
	* NEWS: Updated.
	* patches/cacao/pr2908-missing_functions.patch:
	Provide stubs for JVM_GetClassTypeAnnotations,
	JVM_GetFieldTypeAnnotations, JVM_GetMethodParameters,
	JVM_GetMethodTypeAnnotations and JVM_IsVMGeneratedMethodIx.

2016-03-31  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2909: Install CACAO in same way as JamVM
	* Makefile.am:
	(cacao-install): Perform same operations as
	in jamvm-install.
	* NEWS: Updated.
	* acinclude.m4:
	(IT_WITH_CACAO_HOME): Use a clean subdirectory for
	the OpenJDK-style VM import, as JamVM does.

2016-03-31  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2907: Replace --with-abs-install-dir
	with usual --prefix
	* NEWS: Updated.

2014-06-04  Andrew John Hughes  <gnu.andrew@member.fsf.org>
